deployment/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: design-storage-staging
spec:
  selector:
    matchLabels:
      app: design-storage
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: design-storage
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/design-storage:devel
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /design-storage/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
