deployment/staging/service.yml
kind: Service
apiVersion: v1
metadata:
  name: design-storage-staging
spec:
  selector:
    app: design-storage
    env: staging
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
